Fixed syntax error on safari browser, added time on in socket sends

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,6 +34,7 @@ button:focus {
 }
 
 .index-head {
+		z-index: 100;
 		position: fixed;
 		width: 100%;
 		height: 50px;
@@ -54,7 +55,7 @@ button:focus {
 		top: 0;
 		text-align: right;
 		margin-right: 5px;
-	}
+}
 
 .main-start-box {
 		width: 100%;
